<resources>
    <string name="app_name">Benefy</string>
    <string name="facebook_application_id" translatable="false">508540496613548</string>
    <string name="default_notification_channel_id">locationtest_channel</string>
    <string name="geofence_transition_invalid_type">Geofence Transition Invalid Type</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_btn">REGISTRARSE</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="login_usr">Usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_btn">Iniciar Sesión</string>
    <string name="login_recover_pass">Recuperar mi contraseña</string>
    <string name="usuario_su">Correo</string>
    <string name="apellido_su">Apellido</string>
    <string name="telefono_su">Teléfono</string>
    <string name="fechaNac_su">Fecha de Nacimiento</string>
    <string name="hint_su">dd/mm/aaaa</string>
    <string name="hinttel_su">xxxx-xxxx</string>
    <string name="genero_su">Género</string>
    <string name="estado_su">Estado Civil</string>
    <string name="email_su">Correo Electrónico</string>
    <string name="pass_su">Contraseña</string>
    <string name="conPass_su">Confirmar Contraseña</string>
    <string name="depto_su">Departamento</string>
    <string name="prov_su">Provincia</string>
    <string name="codigo_su">+591</string>
    <string name="no_tienes_una_cuenta_registrate_main">¿No tienes una cuenta? Registrate!</string>
    <string name="debil_su">Débil</string>
    <string name="date_format">dd/mm/aaaa</string>
    <string name="recover_text">Podemos ayudarte a recuperar tu contraseña, te enviaremos una nueva contraseña a tu correo electrónico para que accedas a tu cuenta.</string>
    <string name="recover_email">Correo Electrónico</string>
    <string name="recover_btn">Recuperar</string>
    <string name="recover_correo">Correo Electrónico</string>
    <string name="recover_atras">Atras</string>
    <string name="hint_exp">Busca en Explorar</string>
    <string name="buscar_exp">BUSCAR</string>
    <string name="cerca_exp">Cerca de ti</string>
    <string name="aprovecha_exp">Aprovecha ya</string>
    <string name="nuevo_exp">Lo nuevo</string>
    <string name="descuentos_exp">Mejores descuentos</string>
    <string name="personalizar_exp">Personalizar</string>
    <string name="accesos_exp">Mis Preferencias</string>
    <string name="no_hay_fav">No hay favoritos</string>
    <string name="no_hay_cat">No hay Categorias Activas</string>
    <string name="no_hay_be">No hay Beneficios</string>
    <string name="no_hay_cu">No hay Campañas</string>
    <string name="title_activity_detalle_cupon">DetalleCuponActivity</string>
    <string name="desc_de">Descripción</string>
    <string name="cond_de">Terminos y Condiciones</string>
    <string name="tiem_de">Tiempo Restante</string>
    <string name="efectuar_de">Pasos para efectuar el canje</string>
    <string name="cant_de">Disponibles</string>
    <string name="noCanjes_de">Cupones Agotados!</string>
    <string name="pasos">1. Generar Codigo QR al momento de hacer el canje en uno de los establecimientos designados.\n2. Presentarlo en la caja del comercio para que sea escaneado o digitado.\n3. ¡Listo! Disfruta tu beneficio, promoción o descuento.</string>
    <string name="ahorroA_p">Ahorro Acumulado</string>
    <string name="perdida_p">Perdida</string>
    <string name="ahorro_p">Ahorro</string>
    <string name="pendiente_c">Pendiente de Canje</string>
    <string name="other_p">Otros</string>
    <string name="explorar_menu">Explorar</string>
    <string name="cupones_menu">Cupones</string>
    <string name="beneficios_menu">Beneficios</string>
    <string name="favoritos_menu">Favoritos</string>
    <string name="canje_menu">Canjes</string>
    <string name="enviar_coment">ENVIAR</string>
    <string name="mensaje_coment">Mensaje:</string>
    <string name="comentarios_coment">Comentarios</string>
    <string name="adv_qr">** Al generar este código, NO RESERVA la promoción. Debe realizar el canje en el establecimiento para hacer valida la promoción.</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_hay_comercios">No hay comercios</string>
    <string name="mes_actual">Actual:</string>
    <string name="ahorro_del_mes">Ahorro del Mes</string>
    <string name="calificaci_n">Calificación</string>
    <string name="cu_ntanos_c_mo_te_sentiste_con_los_servicios_de_nuestra_app">¿Cómo te sientes con los servicios de nuestra app?</string>
    <string name="_1_en_general_cuan_satisfecho_se_encuentra_con_el_beneficio_adquirido">1. ¿En general cuan satisfecho se encuentra con el beneficio adquirido?</string>
    <string name="_2_recomendar_a_usted_el_uso_de_nuestra_app">2. ¿Recomendaría usted esta promoción?</string>
    <string name="aceptar">Aceptar</string>
    <string name="omitir">Omitir</string>
    <string name="perfil_menu">Perfil</string>
    <string name="terminos_y_condiciones_menu">Términos y Condiciones</string>
    <string name="comentarios_menu">Comentarios y Reportes</string>
    <string name="configuracion_menu">Configuración</string>
    <string name="ayuda_menu">Ayuda</string>
    <string name="cerrar_sesi_n_menu">Cerrar Sesión</string>
    <string name="scanner_menu">Scanner</string>
    <string name="notificaciones_menu">Notificaciones</string>
    <string name="gps_menu">GPS</string>
    <string name="busca_tus_cupones_menu">Busca tus cupones</string>
    <string name="compartir_menu">Compartir</string>
    <string name="cambio_pais_consulta">Cambiar País</string>
    <string name="otras_opciones">Opciones Avanzadas</string>
    <string name="direccion_menu">Direcciones</string>
    <string name="canje_exitoso_popup">¡CANJE EXITOSO!</string>
    <string name="has_canjeado_tu_cup_n_exitosamente_gracias_por_utilizar_tu_app_de_beneficios_popup">Has canjeado tu cupón exitosamente.\n\n Gracias por utilizar Benefy App.</string>
    <string name="nombre_su">Nombre</string>
    <string name="ayuda_act">Ayuda</string>
    <string name="escr_benos_al_siguiente_correo_para_poder_resolver_tus_dudas_sobre_nuestros_servicios_en_el_app_n_n_ayudame_beneficioslatam_com_n_nestamos_para_servirte_tu_equipo_de_beneficios_act">Escríbenos al siguiente correo para poder resolver tus dudas sobre nuestros servicios en el app.</string>
    <string name="mis_comentarios_co">Mis Comentarios</string>
    <string name="notificaciones_noti">Notificaciones</string>
    <string name="no_hay_notificaciones_noti">No hay notificaciones.</string>
    <string name="escoje_3_accesos_directos_de_tus_categorias_favoritas_seg">Escoje al menos 3 Accesos Directos de tus categorias favoritas</string>
    <string name="cancelar_seg">CANCELAR</string>
    <string name="aceptar_seg">ACEPTAR</string>
    <string name="acepto_los_terminos_y_condiciones_tyc">Acepto los Terminos y Condiciones</string>
    <string name="siguiente_tyc">SIGUIENTE</string>
    <string name="historial_de_canje_hist">Historial de Canje</string>
    <string name="no_hay_ningun_canje_hist">No hay ningun canje.</string>
    <string name="no_hay_suc">No hay Sucursales</string>
    <string name="sucursales_cercanas">Sucursales Cercanas</string>
    <string name="ver_sucursales">Ver Sucursales</string>
    <string name="generar_nuevo_c_digo">Generar nuevo código</string>
    <string name="configuracion_conf">Configuración</string>
    <string name="permite_notificaciones_al_crear_nuevo_cup_n">Permitir notificaciones al crear nuevo cupón en Categorías Preferentes.</string>
    <string name="permite_ruta">Permitir notificaciones de ruta.</string>
    <string name="permite_notificaciones_de_cupones_proximos_a_vencer">Permitir notificaciones de cupones proximos a vencer.</string>
    <string name="cuantas_notificaciones_desea_recibir_como_m_ximo_al_d_a">¿Cuantas notificaciones desea recibir como máximo al día?</string>
    <string name="seleccione_idioma">Seleccione idioma:</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="usuario_existente">Usuario Existente</string>
    <string name="failure_sign">Registro Fallido.</string>
    <string name="update_profile">Perfil Actualizado</string>
    <string name="invalid_credentials">Credenciales Incorrectas</string>
    <string name="welcome">Bienvenido</string>
    <string name="account_invalid">Esta cuenta ya esta vinculada!</string>
    <string name="error_connection">Algo salio mal.. Inténtelo de nuevo.</string>
    <string name="login_canceled">Inicio de Sesión Cancelado</string>
    <string name="scanner">Scanner Cancelado</string>
    <string name="send_comment">Comentario Enviado</string>
    <string name="min_categories">Minimo 3 Categorias</string>
    <string name="max_categories">Máximo 6 Categorias</string>
    <string name="dont_have_wa">Comercio no posee Whatsapp!</string>
    <string name="wa_not_instaled">No tienes instalado Whatsapp!</string>
    <string name="dont_have_ig">Comercio no posee Instagram!</string>
    <string name="dont_have_fb">Comercio no posee Facebook!</string>
    <string name="social_error">Ocurrio un error! Intentelo de nuevo.</string>
    <string name="install_maps">Debes instalar Google Maps!</string>
    <string name="sold_out">Cupones Agotados</string>
    <string name="exceeded">Cupones por Usuario Exedidos</string>
    <string name="qr">Generando QR</string>
    <string name="close">Cerrar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="maps">Debes instalar Google Maps!</string>
    <string name="cu_ntanos_queremos_saber_de_que_pais_deseas_recibir_tus_promociones_y_notificaciones">¡Cuéntanos! Queremos saber de que pais deseas recibir tus promociones y notificaciones.</string>
    <string name="debil_pass">Débil</string>
    <string name="fuerte_pass">Fuerte</string>
    <string name="medio_pass">Medio</string>
    <string name="first_coupon">Tienes</string>
    <string name="second_coupon">disponibles por usuario. Aprovechalos!</string>
    <string name="c_required">Campos Requeridos</string>
    <string name="f_invalid">Formato Invalido</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="billetera">Billetera</string>
    <string name="benefy_mail">ayudame@beneficioslatam.com</string>
    <string name="help_string">Estamos para servirte,</string>
    <string name="benefy_team">Tu equipo de Beneficios</string>
    <string name="next">Siguiente</string>
    <string name="health_form">Formulario de buena salud</string>
    <string name="health_form_description">Para la contratación de su seguro de vida, complete las siguientes preguntas, solo le tomará unos minutos.</string>
    <string name="question_1">Pregunta 1 de 6</string>
    <string name="question1_selected">¿Ha padecido alguna enfermedad que le haya obligado a interrumpir su actividad profesional en los ultimos 10 años, durante mas de 15 días consecutivos?</string>
    <string name="question1_description">En caso de contestación afirmativa, proporcione detalles: (fecha, tipo de enfermedad, duración, médico tratante):</string>
    <string name="question_4">Pregunta 4 de 6</string>
    <string name="question4_selected">Indique su peso y talla actual</string>
    <string name="weight_form">Peso</string>
    <string name="kilograms">kg</string>
    <string name="height_form">Talla</string>
    <string name="centimeters">cm</string>
    <string name="city_filter">Elige una ciudad para filtrar tus articulos y giftcards</string>
    <string name="department">Departamentos</string>
    <string name="cities">Ciudades</string>
    <string name="apply">Aplicar</string>
    <string name="clean">Limpiar</string>
    <string name="loyalty_menu">Lealtad</string>
    <string name="coupons_menu">Cupones</string>
    <string name="store_menu">Tienda</string>
</resources>