<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:textSize="16sp"
            android:fontFamily="@font/circular_book"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            style="@style/TextAppearance.AppCompat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question4_selected"
            android:fontFamily="@font/myriad_pro_regular"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            style="@style/TextAppearance.AppCompat"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginEnd="@dimen/base_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/normal"
                android:text="@string/weight_form"
                android:gravity="center_vertical"
                android:layout_weight="1"
                style="@style/TextAppearance.AppCompat"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weightLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weightField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="@font/myriad_pro_regular"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilograms"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginEnd="@dimen/base_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/normal"
                android:text="@string/height_form"
                android:gravity="center_vertical"
                android:layout_weight="1"
                style="@style/TextAppearance.AppCompat"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/heightLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heightField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:fontFamily="@font/myriad_pro_regular"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centimeters"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/circular_book"
            android:text="@string/next"
            android:textSize="17sp"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorPrimaryDark"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

</ScrollView>