<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/white"
        tools:targetApi="lollipop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/myriad_pro_regular"
            android:text="@string/escr_benos_al_siguiente_correo_para_poder_resolver_tus_dudas_sobre_nuestros_servicios_en_el_app_n_n_ayudame_beneficioslatam_com_n_nestamos_para_servirte_tu_equipo_de_beneficios_act"
            style="@style/TextAppearance.AppCompat"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/circular_book"
        android:text="@string/benefy_mail"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionId"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_string"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/myriad_pro_regular"
        style="@style/TextAppearance.AppCompat"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/benefy_team"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/circular_book"
        style="@style/TextAppearance.AppCompat"/>



</LinearLayout>