<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/userImageId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:padding="4dp"
                android:src="@drawable/isotipo_benefy_color"
                android:background="@color/white"
                android:contentDescription="@string/maps"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/city_filter"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/cardImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cardImage"
            app:layout_constraintBottom_toBottomOf="@id/cardImage"/>

        <LinearLayout
            android:id="@+id/locationInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/cardImage">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/department"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/colorPrimary" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/departmentSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="@font/normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cities"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/colorPrimary" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/provinceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:ems="10"
                    android:fontFamily="@font/normal"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="32dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/apply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_shape"
                    android:fontFamily="@font/bold"
                    android:text="@string/apply"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/colorPrimaryDark"
                    style="@style/Widget.AppCompat.Button.Colored"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clean"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/button_shape"
                    android:fontFamily="@font/bold"
                    android:text="@string/clean"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/colorAccent"
                    style="@style/Widget.AppCompat.Button.Colored"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>